tests/paczka1/small_fuzzy/19399609.err
Error in line 4: 1WGF A935 ,6
Error in line 6: S391 S391 35,6
Error in line 3: zsmxeTouGpR S391 4,7
